perf: otimiza ci com cache de npm

--- a/.github/workflows/cypress-e2e.yml
+++ b/.github/workflows/cypress-e2e.yml
@@ -19,6 +19,14 @@ jobs:
         with:
           node-version: "22.13.1"
 
+      - name: Cache dos módulos Node.js
+        uses: actions/cache@v3
+        with:
+          path: ~/.npm
+          key: ${{ runner.os }}-node-${{ hashFiles('**/package-lock.json') }}
+          restore-keys: |
+            ${{ runner.os }}-node-
+
       - name: Instala dependências
         run: npm ci
 
